--- a/MessageInABottle/Views/Home/MyMessages.cshtml
+++ b/MessageInABottle/Views/Home/MyMessages.cshtml
@@ -1,3 +1,34 @@
 ﻿@{
     ViewBag.Title = "My Messages";
 }
+
+<h2>My Messages</h2>
+
+<table>
+    <tr>
+        <th>Message</th>
+        <th>Status</th>
+    </tr>
+    
+        @foreach (var m in ViewBag.MyMessages)
+        {
+            string status = "Seen " + m.Item2.ToString() + " time(s)";
+
+            if (m.Item3 == true) {
+                status = status + " and kept";
+            }
+
+            if(m.Item2 == 0)
+            {
+                status = "At sea";
+            }
+
+            <tr>
+                <td>@m.Item1</td>
+                <td>@status</td>
+            </tr>
+
+
+        }
+
+</table>
