app finished - full functionality

--- a/MessageInABottle/Views/Account/Login.cshtml
+++ b/MessageInABottle/Views/Account/Login.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Log in";
 }
 
-<h2>@ViewBag.Title.</h2>
+<h2>You must log in to send or keep a message.</h2>
 <div class="row">
     <div class="col-md-8">
         <section id="loginForm">
