--- a/MessageInABottle/Views/Home/Index.cshtml
+++ b/MessageInABottle/Views/Home/Index.cshtml
@@ -3,33 +3,36 @@
 
 @{
     ViewBag.Title = "Message in a Bottle";
+    Layout = "~/Views/Shared/_LayoutHome.cshtml";
 }
 
 <script src="~/Scripts/jquery-3.4.1.min.js"></script>
 <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
 <script src="~/Scripts/bootstrap.min.js"></script>
+<link href="~/Content/Site.css" rel="stylesheet" />
 <div>
+    
     <center>
-        <div class="form-group">
+        <div class="form-group messagebox">
 
             @using (Html.BeginForm("Index", "Home", FormMethod.Post))
             {
                 @Html.TextBoxFor(m => m.Message, new { @class = "form-control", placeholder = "Write a message...", @Value = "", maxlength = 300 })
 
-                <input type="submit" value="Send Message" class="btn btn-default inputbtn" />
+                <input type="submit" value="Send Message" class="btn btnstyles messagebtn" />
                 <br />
-                <div class="@ViewBag.MessageType"> @ViewBag.MessageResponse </div>
+                <span class="errormsg"> @ViewBag.MessageResponse </span>
             }
 
         </div>
 
-        <hr />
-
-        <span>A<span id="another"></span> bottle washes ashore...</span>
+        <hr class="boundaries" />
+    </center>
+    <h4><span class="anotherbottle">A<span id="another"></span> bottle washes ashore...</span></h4>
+    <center>
+        <button class="altbtnstyles btn" data-toggle="modal" id="displayMessage">Pick up bottle</button>
         <br />
-        <button class="btn btn-default" data-toggle="modal" id="displayMessage">Pick up bottle</button>
-        <br />
-        <span id="errorMessage"></span>
+        <span class="errormsg"id="errorMessage"></span>
 
         <div class="modal fade" id="messageModal">
             <div class="modal-dialog">
