--- a/MessageInABottle/Views/Home/MyMessages.cshtml
+++ b/MessageInABottle/Views/Home/MyMessages.cshtml
@@ -1,13 +1,14 @@
 ﻿@{
     ViewBag.Title = "My Messages";
+    Layout = "~/Views/Shared/_LayoutMessages.cshtml";
 }
 
 <h2>My Messages</h2>
 <link href="~/Content/Site.css" rel="stylesheet" />
 <div class="container">
     <div class="row">
-        <div class="col-xs-8"style="font-weight:bold;">Message</div>
-        <div class="col-xs-4"style="font-weight:bold;">Status</div>
+        <div class="col-xs-8" style="font-weight:bold;">Message</div>
+        <div class="col-xs-4" style="font-weight:bold;">Status</div>
     </div>
     <hr style="margin-top:2px;margin-bottom:7px;" />
     @foreach (var m in ViewBag.MyMessages)
