--- a/MessageInABottle/Views/Shared/_LayoutHome.cshtml
+++ b/MessageInABottle/Views/Shared/_LayoutHome.cshtml
@@ -37,7 +37,7 @@
             </div>
         </div>
     </div>
-    <div class="genericpage">
+    <div class="mainbckgrnd">
         <div class="content">
 
             <div class="content-inside">
