--- a/MessageInABottle/Views/Home/Index.cshtml
+++ b/MessageInABottle/Views/Home/Index.cshtml
@@ -34,17 +34,17 @@
         <br />
         <span class="errormsg"id="errorMessage"></span>
 
-        <div class="modal fade" id="messageModal">
+        <div class="modal fade modalmods" id="messageModal">
             <div class="modal-dialog">
-                <div class="modal-content">
+                <div class="modal-content modalbckgrnd">
 
-                    <div class="modal-body">
+                    <div class="modal-body message">
                         <span id="messageID"></span>
                     </div>
 
                     <div class="modal-footer">
-                        <button class="btn btn-default" id="keepBottle">Keep</button>
-                        <button class="btn btn-default" id="returnBottle">Return</button>
+                        <button class="btn btnstyles" id="keepBottle">Keep</button>
+                        <button class="btn btnstyles" id="returnBottle">Return</button>
                     </div>
 
                 </div>
