--- a/MessageInABottle/Views/Shared/_Layout.cshtml
+++ b/MessageInABottle/Views/Shared/_Layout.cshtml
@@ -51,9 +51,9 @@
 
         <footer class="footer">
             <center>
-                <p>Share if you enjoyed:</p>
-                <a href="https://www.facebook.com/sharer/sharer.php?u=https://www.google.com" target="_blank"><i class="fa fa-facebook"></i>       </a>
-                <a href="https://twitter.com/home?status=https://www.google.com" target="_blank"><i class="fa fa-twitter"></i></a>
+                <p class="footertextgeneric">Share if you enjoyed:</p>
+                <a href="https://www.facebook.com/sharer/sharer.php?u=https://www.google.com" target="_blank"><i class="fa fa-facebook fbicon" style="font-size: 20px;"></i></a>
+                <a href="https://twitter.com/home?status=https://www.google.com" target="_blank"><i class="fa fa-twitter twittericon" style="font-size: 20px;"></i></a>
             </center>
         </footer>
 
