--- a/MessageInABottle/Views/Shared/_LayoutHome.cshtml
+++ b/MessageInABottle/Views/Shared/_LayoutHome.cshtml
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-    <div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar navbar-inverse navbar-fixed-top navnav">
         <div class="container">
             <div class="navbar-header">
                 <div class="navbar-brand" style="padding:2px 2px;">
@@ -51,9 +51,9 @@
 
         <footer class="footer">
             <center>
-                <p>Share if you enjoyed:</p>
-                <a href="https://www.facebook.com/sharer/sharer.php?u=https://www.google.com" target="_blank"><i class="fa fa-facebook"></i>       </a>
-                <a href="https://twitter.com/home?status=https://www.google.com" target="_blank"><i class="fa fa-twitter"></i></a>
+                <p style="margin-bottom: 5px;"><span class="footertext">Share if you enjoyed:</span></p>
+                <a href="https://www.facebook.com/sharer/sharer.php?u=https://www.google.com" target="_blank"><i class="fa fa-facebook fbicon"></i></a>
+                <a href="https://twitter.com/home?status=https://www.google.com" target="_blank"><i class="fa fa-twitter twittericon"></i></a>
             </center>
         </footer>
 
