--- a/MessageInABottle/Views/Shared/_Layout.cshtml
+++ b/MessageInABottle/Views/Shared/_Layout.cshtml
@@ -15,15 +15,13 @@
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
-                <div class="navbar-brand" style="padding:2px 2px;">
+                <div class="navbar-brand" style="padding:1px 1px 0px 4px;">
                     <a href="@Url.Action("Index", "Home")" title="Message in a Bottle">
-                        <img style="height:48px;"alt="Message in a Bottle" src="@Url.Content("~/Images/waveicon.png")">
+                        <img style="height:42px;" alt="Message in a Bottle" src="@Url.Content("~/Images/icon.png")">
                     </a>
                 </div>
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
+                <button type="button" class="navbar-toggle threedotsbtn" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="threedots"></span>
                 </button>
 
             </div>
