--- a/MessageInABottle/Views/Shared/_LayoutHome.cshtml
+++ b/MessageInABottle/Views/Shared/_LayoutHome.cshtml
@@ -12,18 +12,16 @@
 </head>
 <body>
 
-    <div class="navbar navbar-inverse navbar-fixed-top navnav">
+    <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
-                <div class="navbar-brand" style="padding:2px 2px;">
+                <div class="navbar-brand" style="padding:1px 1px 0px 4px;">
                     <a href="@Url.Action("Index", "Home")" title="Message in a Bottle">
-                        <img style="height:48px;"alt="Message in a Bottle" src="@Url.Content("~/Images/waveicon.png")">
+                        <img style="height:42px;" alt="Message in a Bottle" src="@Url.Content("~/Images/icon.png")">
                     </a>
                 </div>
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
+                <button type="button" class="navbar-toggle threedotsbtn" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="threedots"></span>
                 </button>
 
             </div>
@@ -49,13 +47,13 @@
         </div>
     </div>
 
-        <footer class="footer">
-            <center>
-                <p style="margin-bottom: 5px;"><span class="footertext">Share if you enjoyed:</span></p>
-                <a href="https://www.facebook.com/sharer/sharer.php?u=https://www.google.com" target="_blank"><i class="fa fa-facebook fbicon"></i></a>
-                <a href="https://twitter.com/home?status=https://www.google.com" target="_blank"><i class="fa fa-twitter twittericon"></i></a>
-            </center>
-        </footer>
+    <footer class="footer">
+        <center>
+            <p style="margin-bottom: 5px;"><span class="footertext">Share if you enjoyed:</span></p>
+            <a href="https://www.facebook.com/sharer/sharer.php?u=https://www.google.com" target="_blank"><i class="fa fa-facebook fbicon"></i></a>
+            <a href="https://twitter.com/home?status=https://www.google.com" target="_blank"><i class="fa fa-twitter twittericon"></i></a>
+        </center>
+    </footer>
 
 
     @Scripts.Render("~/bundles/jquery")
