--- a/MessageInABottle/Views/Account/_ExternalLoginsListPartial.cshtml
+++ b/MessageInABottle/Views/Account/_ExternalLoginsListPartial.cshtml
@@ -1,8 +1,7 @@
 ﻿@model MessageInABottle.Models.ExternalLoginListViewModel
 @using Microsoft.Owin.Security
+<link href="~/Content/Site.css" rel="stylesheet" />
 
-<h4>Use another service to log in.</h4>
-<hr />
 @{
     var loginProviders = Context.GetOwinContext().Authentication.GetExternalAuthenticationTypes();
     if (loginProviders.Count() == 0) {
@@ -18,8 +17,17 @@
             @Html.AntiForgeryToken()
             <div id="socialLoginList">
                 <p>
-                    @foreach (AuthenticationDescription p in loginProviders) {
-                        <button type="submit" class="btn btn-default" id="@p.AuthenticationType" name="provider" value="@p.AuthenticationType" title="Log in using your @p.Caption account">@p.AuthenticationType</button>
+                    @foreach (AuthenticationDescription p in loginProviders)
+                    {
+                        if (p.AuthenticationType.ToLower() == "facebook")
+                        {
+                            <button type="submit" class="btn btn-default fblogin" id="@p.AuthenticationType" name="provider" value="@p.AuthenticationType" title="Log in using your @p.Caption account">Log in with @p.AuthenticationType</button>
+                        }
+                        else
+                        {
+                            <button type="submit" class="btn btn-default googlelogin" id="@p.AuthenticationType" name="provider" value="@p.AuthenticationType" title="Log in using your @p.Caption account">Log in with @p.AuthenticationType</button>
+                        }
+                        <br />
                     }
                 </p>
             </div>
