--- a/MessageInABottle/Views/Home/Index.cshtml
+++ b/MessageInABottle/Views/Home/Index.cshtml
@@ -36,7 +36,7 @@
 
         <div class="modal fade modalmods" id="messageModal">
             <div class="modal-dialog">
-                <div class="modal-content modalbckgrnd">
+                <div class="modal-content modalbckgrnd" id="homepage">
 
                     <div class="modal-body message">
                         <span id="messageID"></span>
