--- a/MessageInABottle/Views/Shared/_LayoutHome.cshtml
+++ b/MessageInABottle/Views/Shared/_LayoutHome.cshtml
@@ -35,7 +35,7 @@
             </div>
         </div>
     </div>
-    <div class="mainbckgrnd">
+    <div class="mainbckgrnd" id="homepage">
         <div class="content">
 
             <div class="content-inside">
