--- a/MessageInABottle/Content/Site.css
+++ b/MessageInABottle/Content/Site.css
@@ -17,33 +17,47 @@ h2{
     padding-top:10px;
     padding-left:5px;
 }
-/* Portrait */
+
+.text-area {
+    resize: none;
+    margin-bottom:5px;
+    width:300px;
+    font-family:Sumida;
+    font-size:19px;
+}
+
+textarea.form-control {
+    height: 70px;
+}
+/*
+
 @media only screen and (max-device-width: 828px) and (orientation: portrait) {
     #homepage {
-        background-image: url("../Images/small_portrait.png");
+        background-image: url("../Images/simplebackground.jpg");
     }
 }
 
-/* Landscape */
+
 @media only screen and (max-device-width: 1136px) and (orientation: landscape) {
     #homepage {
         background-image: url("../Images/small_landscape.png");
     }
 }
 
-/* Portrait */
+
 @media only screen and (min-device-width: 829px) and (orientation: portrait) {
     #homepage {
         background-image: url("../Images/big_portrait.png");
     }
 }
 
-/* Landscape */
+
 @media only screen and (min-device-width: 1137px) and (orientation: landscape) {
     #homepage {
         background-image: url("../Images/big_landscape.png");
     }
 }
+*/
 
 .navbar-nav > li > a {
     padding-top: 10px;
@@ -53,8 +67,9 @@ h2{
 .threedots:after {
     content: '\2807';
     font-size: 20px;
-    color: #FFFBF2;
-    background-color: #404952;
+    font-weight:bold;
+    color: #FCFCFA;
+    background-color: #1F2730;
 }
 
 .threedotsbtn{
@@ -64,15 +79,15 @@ h2{
 }
 
 .threedotsbtn:hover {
-    background-color: #404952;
+    background-color: #1F2730;
 }
 
 .threedotsbtn:active {
-    background-color: #404952;
+    background-color: #1F2730;
 }
 
 .navbar {
-    background-color: #404952;
+    background-color: #1F2730;
     min-height:44px;
 }
 
@@ -86,18 +101,18 @@ h2{
     margin-right:5px;
 }
 .navbar-inverse .navbar-toggle:focus, .navbar-inverse .navbar-toggle:hover {
-    background-color: #404952;
+    background-color: #1F2730;
 }
 
 .genericpage {
-    background-color: #FFFBF2;
-    color: #404952;
+    background-color: #FCFCFA;
+    color: #1F2730;
     min-height: 100%;
 }
 
 .darklight {
-    background-color: #404952;
-    color: #FFFBF2;
+    background-color: #1F2730;
+    color: #FCFCFA;
     padding-right:3px;
     padding-left:3px;
     padding-top:2px;
@@ -105,18 +120,25 @@ h2{
 }
 
 .lightdark {
-    background-color: #FFFBF2;
-    color: #404952;
+    background-color: #FCFCFA;
+    color: #1F2730;
     padding-right: 2px;
     padding-left: 2px;
 }
 
 .content {
     min-height: 100%;
+    margin-bottom:50px;
 }
 
 .content-inside {
     padding-bottom: 50px;
+}
+
+.registerHeader{
+    font-family:Sumida;
+    font-size:28px;
+    margin-bottom:10px;
 }
 
 .footer {
@@ -125,9 +147,9 @@ h2{
 }
 
 .footertext {
-    font-size: 12px;
-    background-color: #404952;
-    color: #FFFBF2;
+    font-size: 18px;
+    color: #1F2730;
+    font-family:Sumida
 }
 
 .footertextgeneric {
@@ -183,7 +205,7 @@ h2{
 }
 
 .modalmods{
-    margin-top:150px;
+    margin-top:120px;
 }
 
 .modal-body p {
@@ -191,73 +213,82 @@ h2{
 }
 
 .modalbckgrnd {
-    background-image: url("../Images/parchment.png");
-    min-height: 100%; /* You must set a specified height */
-    background-position: center; /* Center the image */
-    background-repeat: no-repeat; /* Do not repeat the image */
+    background-color: #faf6ed;
+    /*background-image: url("../Images/parchment.png");
+    min-height: 100%;  You must set a specified height 
+    background-position: center; /* Center the image 
+    background-repeat: no-repeat; /* Do not repeat the image 
     background-size: cover; /* Resize the background image to cover the entire container */
 }
 
+.modal-footer {
+    border: none;
+
+}
 
 .anotherbottle {
-    margin-left: 20px;
-    font-size:31px;
+
+    font-size:33px;
     font-family:Sumida
 }
 
 .btnstyles {
-    background-color: #404952;
-    color: #FFFBF2;
+    background-color: #1F2730;
+    color: #FCFCFA;
     border:none;
     
 }
 
 .btnstyles:hover {
-    background-color: #404952;
-    color: #FFFBF2;
+    background-color: #1F2730;
+    color: #FCFCFA;
     border:none;
 }
 
 .btnstyles:active, .btnstyles:focus {
-    background-color: #FFFBF2;
-    color: #404952;
+    background-color: #FCFCFA;
+    color: #1F2730;
     border:none;
 }
 
 .altbtnstyles {
-    background-color: #FFFBF2;
-    color: #404952;
+    background-color: #FCFCFA;
+    color: #1F2730;
     border:none;
 }
 
 .altbtnstyles:hover {
-    background-color: #FFFBF2;
-    color: #404952;
+    background-color: #FCFCFA;
+    color: #1F2730;
     border:none;
 }
 
 .altbtnstyles:active, .altbtnstyles:focus {
-    background-color: #404952;
-    color: #FFFBF2;
+    background-color: #1F2730;
+    color: #FCFCFA;
     border:none;
 }
 
 .errormsg {
-    background-color: #404952;
-    color: #FFFBF2;
-    font-size:12px;
+    font-weight:bold;
+    color: #1F2730;
+    font-size: 12px;
+}
+.errormsgwrapper {
+    height: 12px;
 }
 
 .mainbckgrnd {
-    
-    min-height: 100%; /* You must set a specified height */
-    background-position: center; /* Center the image */
-    background-repeat: no-repeat; /* Do not repeat the image */
-    background-size: cover; /* Resize the background image to cover the entire container */
+    background-image: url("../Images/simplebackground.jpg");
+    min-height: 100%; /*You must set a specified height */
+    background-position: left; /* Center the image */
+    background-repeat: repeat; /* Do not repeat the image */
+    background-size: auto /* Resize the background image to cover the entire container */
 }
 
 .messagebox{
     padding-top: 100px;
+    padding-bottom:56px;
 
 }
 
