--- a/MessageInABottle/Content/bootstrap.css
+++ b/MessageInABottle/Content/bootstrap.css
@@ -4569,7 +4569,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   }
 }
 .navbar-default {
-    background-color: #404952;
+    background-color: #1F2730;
     border-color: #e7e7e7;
 }
 .navbar-default .navbar-brand {
@@ -4595,7 +4595,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
     .navbar-default .navbar-nav > .active > a:hover,
     .navbar-default .navbar-nav > .active > a:focus {
         color: #555;
-        background-color: #404952;
+        background-color: #1F2730;
         
     }
 .navbar-default .navbar-nav > .disabled > a,
@@ -4608,7 +4608,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
     .navbar-default .navbar-nav > .open > a:hover,
     .navbar-default .navbar-nav > .open > a:focus {
         color: #555;
-        background-color: #404952;
+        background-color: #1F2730;
         
     }
 @media (max-width: 767px) {
@@ -4624,7 +4624,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
     .navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover,
     .navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
         color: #555;
-        background-color: #404952;
+        background-color: #1F2730;
     }
   .navbar-default .navbar-nav .open .dropdown-menu > .disabled > a,
   .navbar-default .navbar-nav .open .dropdown-menu > .disabled > a:hover,
@@ -4641,7 +4641,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   background-color: #ddd;
 }
     .navbar-default .navbar-toggle .icon-bar {
-        background-color: #404952;
+        background-color: #1F2730;
     }
 .navbar-default .navbar-collapse,
 .navbar-default .navbar-form {
@@ -4667,7 +4667,7 @@ fieldset[disabled] .navbar-default .btn-link:focus {
   color: #ccc;
 }
 .navbar-inverse {
-    background-color: #404952;
+    background-color: #1F2730;
     border-color: #080808;
 }
 .navbar-inverse .navbar-brand {
@@ -4693,7 +4693,7 @@ fieldset[disabled] .navbar-default .btn-link:focus {
     .navbar-inverse .navbar-nav > .active > a:hover,
     .navbar-inverse .navbar-nav > .active > a:focus {
         color: #fff;
-        background-color: #404952;
+        background-color: #1F2730;
     }
 .navbar-inverse .navbar-nav > .disabled > a,
 .navbar-inverse .navbar-nav > .disabled > a:hover,
@@ -4705,14 +4705,14 @@ fieldset[disabled] .navbar-default .btn-link:focus {
     .navbar-inverse .navbar-nav > .open > a:hover,
     .navbar-inverse .navbar-nav > .open > a:focus {
         color: #fff;
-        background-color: #404952;
+        background-color: #1F2730;
     }
 @media (max-width: 767px) {
   .navbar-inverse .navbar-nav .open .dropdown-menu > .dropdown-header {
     border-color: #080808;
   }
     .navbar-inverse .navbar-nav .open .dropdown-menu .divider {
-        background-color: #404952;
+        background-color: #1F2730;
     }
   .navbar-inverse .navbar-nav .open .dropdown-menu > li > a {
     color: #9d9d9d;
@@ -4726,7 +4726,7 @@ fieldset[disabled] .navbar-default .btn-link:focus {
     .navbar-inverse .navbar-nav .open .dropdown-menu > .active > a:hover,
     .navbar-inverse .navbar-nav .open .dropdown-menu > .active > a:focus {
         color: #fff;
-        background-color: #404952;
+        background-color: #1F2730;
     }
   .navbar-inverse .navbar-nav .open .dropdown-menu > .disabled > a,
   .navbar-inverse .navbar-nav .open .dropdown-menu > .disabled > a:hover,
@@ -4740,10 +4740,10 @@ fieldset[disabled] .navbar-default .btn-link:focus {
 }
     .navbar-inverse .navbar-toggle:hover,
     .navbar-inverse .navbar-toggle:focus {
-        background-color: #404952;
+        background-color: #1F2730;
     }
     .navbar-inverse .navbar-toggle .icon-bar {
-        background-color: #404952;
+        background-color: #1F2730;
     }
 .navbar-inverse .navbar-collapse,
 .navbar-inverse .navbar-form {
