--- a/MessageInABottle/Views/Account/Login.cshtml
+++ b/MessageInABottle/Views/Account/Login.cshtml
@@ -5,18 +5,17 @@
 }
 
 <div class="boundaries">
-    <h2>You must log in to keep or send a message.</h2>
-
     <center>
+        <div class="registerHeader">Yo-ho-ho! Ye must logge in.</div>
+
         <div>
             <section id="socialLoginForm">
                 @Html.Partial("_ExternalLoginsListPartial", new ExternalLoginListViewModel { ReturnUrl = ViewBag.ReturnUrl })
             </section>
         </div>
-    </center>
+
     <h4 style="padding-top:10px;">Or use a registered email:</h4>
 
-    <center>
         <div class="row">
             <div class="col-md-8">
                 <section id="loginForm">
@@ -26,16 +25,16 @@
 
                         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                         <div class="form-group">
-                            @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
+                            
                             <div class="col-md-10">
-                                @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+                                @Html.TextBoxFor(m => m.Email, new { @class = "form-control", placeholder = "Email" })
                                 @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
                             </div>
                         </div>
                         <div class="form-group">
-                            @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
+                            
                             <div class="col-md-10">
-                                @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
+                                @Html.PasswordFor(m => m.Password, new { @class = "form-control", placeholder = "Password" })
                                 @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
                             </div>
                         </div>
