--- a/MessageInABottle/Views/Account/_ExternalLoginsListPartial.cshtml
+++ b/MessageInABottle/Views/Account/_ExternalLoginsListPartial.cshtml
@@ -19,14 +19,7 @@
                 <p>
                     @foreach (AuthenticationDescription p in loginProviders)
                     {
-                        if (p.AuthenticationType.ToLower() == "facebook")
-                        {
-                            <button type="submit" class="btn btn-default fblogin" id="@p.AuthenticationType" name="provider" value="@p.AuthenticationType" title="Log in using your @p.Caption account">Log in with @p.AuthenticationType</button>
-                        }
-                        else
-                        {
-                            <button type="submit" class="btn btn-default googlelogin" id="@p.AuthenticationType" name="provider" value="@p.AuthenticationType" title="Log in using your @p.Caption account">Log in with @p.AuthenticationType</button>
-                        }
+                    <button type="submit" style="margin-bottom:5px;" class="btn btn-default btnstyles" id="@p.AuthenticationType" name="provider" value="@p.AuthenticationType" title="Log in using your @p.Caption account">Log in with @p.AuthenticationType</button>
                         <br />
                     }
                 </p>
