--- a/MessageInABottle/Views/Home/MyBottles.cshtml
+++ b/MessageInABottle/Views/Home/MyBottles.cshtml
@@ -5,19 +5,23 @@
 <h2>My Bottles</h2>
 <hr style="margin-top:2px;margin-bottom:7px;" class="boundaries" />
 
-    @if (ViewBag.MyBottles != null)
+@if (ViewBag.MyBottles.Count != 0)
+{
+    foreach (var m in ViewBag.MyBottles)
     {
-        foreach (var m in ViewBag.MyBottles)
-        {
-            
-            <div class="container">
-                <div class="row">
-                    <div class="col-xs-8">@m.Item1</div>
-                    <div class="col-xs-4">@Html.ActionLink("Return", "UpdateBottles", new { rowid = m.Item2.ToString(), @class = "btn" })</div>
-                </div>
-            </div>
-            <hr style="margin-top:3px;margin-bottom:3px;" class="boundaries" />
 
-        }
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-8">@m.Item1</div>
+                <div class="col-xs-4">@Html.ActionLink("Return", "UpdateBottles", new { rowid = m.Item2.ToString(), @class = "btn" })</div>
+            </div>
+        </div>
+        <hr style="margin-top:3px;margin-bottom:3px;" class="boundaries" />
+
     }
+}
+else
+{
+    <div class="registerHeader boundaries">Ye haven't picked up any bottles yet! Yarrr!</div>
+}
 
