--- a/MessageInABottle/Views/Shared/_LayoutHome.cshtml
+++ b/MessageInABottle/Views/Shared/_LayoutHome.cshtml
@@ -49,7 +49,7 @@
 
     <footer class="footer">
         <center>
-            <p style="margin-bottom: 5px;"><span class="footertext">Share if you enjoyed:</span></p>
+            <p style="margin-bottom: 5px;"><span class="footertext">Please share if you enjoyed!</span></p>
             <a href="https://www.facebook.com/sharer/sharer.php?u=https://www.google.com" target="_blank"><i class="fa fa-facebook fbicon"></i></a>
             <a href="https://twitter.com/home?status=https://www.google.com" target="_blank"><i class="fa fa-twitter twittericon"></i></a>
         </center>
