--- a/MessageInABottle/Views/Shared/_Layout.cshtml
+++ b/MessageInABottle/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
-<body>
+<body class="genericpage">
 
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
@@ -35,23 +35,17 @@
             </div>
         </div>
     </div>
-    <div class="genericpage">
-        <div class="content">
 
-            <div class="content-inside">
+            <div class="mainpage">
                 @RenderBody()
 
             </div>
 
-
-        </div>
-    </div>
-
         <footer class="footer">
             <center>
                 <p class="footertext">Please share if you enjoyed!</p>
-                <a href="https://www.facebook.com/sharer/sharer.php?u=https://www.google.com" target="_blank"><i class="fa fa-facebook fbicon" style="font-size: 20px;"></i></a>
-                <a href="https://twitter.com/home?status=https://www.google.com" target="_blank"><i class="fa fa-twitter twittericon" style="font-size: 20px;"></i></a>
+                <a href="https://www.facebook.com/sharer/sharer.php?u=https://messageinabottle.azurewebsites.net/" target="_blank"><i class="fa fa-facebook fbicon" style="font-size: 20px;"></i></a>
+                <a href="https://twitter.com/intent/tweet?url=https://messageinabottle.azurewebsites.net/&text=" target="_blank"><i class="fa fa-twitter twittericon" style="font-size: 20px;"></i></a>
             </center>
         </footer>
 
