--- a/MessageInABottle/Views/Shared/_LayoutHome.cshtml
+++ b/MessageInABottle/Views/Shared/_LayoutHome.cshtml
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
-<body>
+<body class="mainbckgrnd">
 
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
@@ -35,23 +35,17 @@
             </div>
         </div>
     </div>
-    <div class="mainbckgrnd" id="homepage">
-        <div class="content">
 
-            <div class="content-inside">
+            <div class="mainpage" id="homepage">
                 @RenderBody()
 
             </div>
 
-
-        </div>
-    </div>
-
     <footer class="footer">
         <center>
             <p style="margin-bottom: 5px;"><span class="footertext">Please share if you enjoyed!</span></p>
-            <a href="https://www.facebook.com/sharer/sharer.php?u=https://www.google.com" target="_blank"><i class="fa fa-facebook fbicon"></i></a>
-            <a href="https://twitter.com/home?status=https://www.google.com" target="_blank"><i class="fa fa-twitter twittericon"></i></a>
+            <a href="https://www.facebook.com/sharer/sharer.php?u=https://messageinabottle.azurewebsites.net/" target="_blank"><i class="fa fa-facebook fbicon"></i></a>
+            <a href="https://twitter.com/intent/tweet?url=https://messageinabottle.azurewebsites.net/&text=" target="_blank"><i class="fa fa-twitter twittericon"></i></a>
         </center>
     </footer>
 
