--- a/MessageInABottle/Views/Home/Contact.cshtml
+++ b/MessageInABottle/Views/Home/Contact.cshtml
@@ -2,3 +2,7 @@
 @{
     ViewBag.Title = "Contact";
 }
+
+<h2>Contact</h2>
+
+<div class="registerHeader boundaries">To get in touch: app.messageinabottle@gmail.com</div>
